--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "baith",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://truongpa1711.github.io/qlnv",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -9,6 +10,7 @@
     "axios": "^1.4.0",
     "build": "^0.1.4",
     "cors": "^2.8.5",
+    "gh-pages": "^5.0.0",
     "json-serve": "^0.1.0",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
@@ -20,10 +22,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
